Edited for phone

--- a/full/index.html
+++ b/full/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <title id="title"></title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,11 +25,11 @@
     <div id="separator">Got the goods? Let's make it!</div>
     <div id="instructions">
         <div id="instructions1Title" class="title"></div>
-        <div id="instructions1"></div>
+        <ol id="instructions1"></ol>
         <div id="instructions2Title" class="title"></div>
-        <div id="instructions2"></div>
+        <ol id="instructions2"></ol>
         <div id="instructions3Title" class="title"></div>
-        <div id="instructions3"></div>
+        <ol id="instructions3"></ol>
     </div>
 </div>
 
