--- a/index.html
+++ b/index.html
@@ -6,29 +6,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <div id="header">Recipes</div>
 
 <div id="topBar">
     <button id="homeBtn">Home</button>
     <div id="breakfast">
-        <button id="breakfastBtn" class="topBtn">Breakfast
-            <svg class="down" width="clamp(6px, 10px, 1.5vw)" height="clamp(8px, 12px, 1.5vw)" viewBox="0 -4.5 20 15" xmlns="http://www.w3.org/2000/svg">
-                <g transform="translate(-180.000000, -6684.000000)" fill="#000000"><g transform="translate(56.000000, 160.000000)">
-                    <path d="M144,6525.39 L142.594,6524 L133.987,6532.261 L133.069,6531.38 L133.074,6531.385 L125.427,6524.045
-                        L124,6525.414 C126.113,6527.443 132.014,6533.107 133.987,6535 C135.453,6533.594 134.024,6534.965 144,6525.39">
-                    </path>
-                </g></g>
-            </svg>
-            <svg class="up" width="clamp(6px, 10px, 1.5vw)" height="clamp(8px, 12px, 1.5vw)" viewBox="0 -4.5 20 15" xmlns="http://www.w3.org/2000/svg">
-                <g transform="translate(-140.000000, -6683.000000)" fill="#000000"><g id="icons" transform="translate(56.000000, 160.000000)">
-                    <path d="M84,6532.61035 L85.4053672,6534 L94.0131154,6525.73862 L94.9311945,6526.61986 L94.9261501,6526.61502
-                        L102.573446,6533.95545 L104,6532.58614 C101.8864,6530.55736 95.9854722,6524.89321 94.0131154,6523
-                        C92.5472155,6524.40611 93.9757869,6523.03486 84,6532.61035">
-                    </path>
-                </g></g>
-            </svg>
-        </button>
+        <button id="breakfastBtn" class="topBtn">Breakfast</button>
         <div id="breakfastMenu" class="dropdown">
             <button>Banana bread</button>
             <button>Banana muffins</button>
@@ -37,23 +20,7 @@
         </div>
     </div>
     <div id="lunch">
-        <button id="lunchBtn" class="topBtn">Lunch/Dinner
-            <svg class="down" width="clamp(6px, 10px, 1.5vw)" height="clamp(8px, 12px, 1.5vw)" viewBox="0 -4.5 20 15" xmlns="http://www.w3.org/2000/svg">
-                <g transform="translate(-180.000000, -6684.000000)" fill="#000000"><g transform="translate(56.000000, 160.000000)">
-                    <path d="M144,6525.39 L142.594,6524 L133.987,6532.261 L133.069,6531.38 L133.074,6531.385 L125.427,6524.045
-                        L124,6525.414 C126.113,6527.443 132.014,6533.107 133.987,6535 C135.453,6533.594 134.024,6534.965 144,6525.39">
-                    </path>
-                </g></g>
-            </svg>
-            <svg class="up" width="clamp(6px, 10px, 1.5vw)" height="clamp(8px, 12px, 1.5vw)" viewBox="0 -4.5 20 15" xmlns="http://www.w3.org/2000/svg">
-                <g transform="translate(-140.000000, -6683.000000)" fill="#000000"><g id="icons" transform="translate(56.000000, 160.000000)">
-                    <path d="M84,6532.61035 L85.4053672,6534 L94.0131154,6525.73862 L94.9311945,6526.61986 L94.9261501,6526.61502
-                        L102.573446,6533.95545 L104,6532.58614 C101.8864,6530.55736 95.9854722,6524.89321 94.0131154,6523
-                        C92.5472155,6524.40611 93.9757869,6523.03486 84,6532.61035">
-                    </path>
-                </g></g>
-            </svg>
-        </button>
+        <button id="lunchBtn" class="topBtn">Lunch/Dinner</button>
         <div id="lunchMenu" class="dropdown">
             <button>Beef bulgogi</button>
             <button>Caprese sandwich</button>
@@ -62,23 +29,7 @@
         </div>
     </div>
     <div id="dessert">
-        <button id="dessertBtn" class="topBtn">Dessert
-            <svg class="down" width="clamp(6px, 10px, 1.5vw)" height="clamp(8px, 12px, 1.5vw)" viewBox="0 -4.5 20 15" xmlns="http://www.w3.org/2000/svg">
-                <g transform="translate(-180.000000, -6684.000000)" fill="#000000"><g transform="translate(56.000000, 160.000000)">
-                    <path d="M144,6525.39 L142.594,6524 L133.987,6532.261 L133.069,6531.38 L133.074,6531.385 L125.427,6524.045
-                        L124,6525.414 C126.113,6527.443 132.014,6533.107 133.987,6535 C135.453,6533.594 134.024,6534.965 144,6525.39">
-                    </path>
-                </g></g>
-            </svg>
-            <svg class="up" width="clamp(6px, 10px, 1.5vw)" height="clamp(8px, 12px, 1.5vw)" viewBox="0 -4.5 20 15" xmlns="http://www.w3.org/2000/svg">
-                <g transform="translate(-140.000000, -6683.000000)" fill="#000000"><g id="icons" transform="translate(56.000000, 160.000000)">
-                    <path d="M84,6532.61035 L85.4053672,6534 L94.0131154,6525.73862 L94.9311945,6526.61986 L94.9261501,6526.61502
-                        L102.573446,6533.95545 L104,6532.58614 C101.8864,6530.55736 95.9854722,6524.89321 94.0131154,6523
-                        C92.5472155,6524.40611 93.9757869,6523.03486 84,6532.61035">
-                    </path>
-                </g></g>
-            </svg>
-        </button>
+        <button id="dessertBtn" class="topBtn">Dessert</button>
         <div id="dessertMenu" class="dropdown">
             <button>Apple crumble</button>
             <button>Brownie in a mug</button>
@@ -89,23 +40,7 @@
         </div>
     </div>
     <div id="adds">
-        <button id="addsBtn" class="topBtn">Additions/Basics
-            <svg class="down" width="clamp(6px, 10px, 1.5vw)" height="clamp(8px, 12px, 1.5vw)" viewBox="0 -4.5 20 15" xmlns="http://www.w3.org/2000/svg">
-                <g transform="translate(-180.000000, -6684.000000)" fill="#000000"><g transform="translate(56.000000, 160.000000)">
-                    <path d="M144,6525.39 L142.594,6524 L133.987,6532.261 L133.069,6531.38 L133.074,6531.385 L125.427,6524.045
-                        L124,6525.414 C126.113,6527.443 132.014,6533.107 133.987,6535 C135.453,6533.594 134.024,6534.965 144,6525.39">
-                    </path>
-                </g></g>
-            </svg>
-            <svg class="up" width="clamp(6px, 10px, 1.5vw)" height="clamp(8px, 12px, 1.5vw)" viewBox="0 -4.5 20 15" xmlns="http://www.w3.org/2000/svg">
-                <g transform="translate(-140.000000, -6683.000000)" fill="#000000"><g id="icons" transform="translate(56.000000, 160.000000)">
-                    <path d="M84,6532.61035 L85.4053672,6534 L94.0131154,6525.73862 L94.9311945,6526.61986 L94.9261501,6526.61502
-                        L102.573446,6533.95545 L104,6532.58614 C101.8864,6530.55736 95.9854722,6524.89321 94.0131154,6523
-                        C92.5472155,6524.40611 93.9757869,6523.03486 84,6532.61035">
-                    </path>
-                </g></g>
-            </svg>
-        </button>
+        <button id="addsBtn" class="topBtn">Additions/Basics</button>
         <div id="addsMenu" class="dropdown">
             <button>Basmati rice</button>
             <button>Boiled eggs</button>
@@ -421,7 +356,6 @@
 
 <script type="module" src="firestore.js"></script>
 <script src="mainpage.js"></script>
-
 
 </body>
 </html>
