--- a/index.html
+++ b/index.html
@@ -13,40 +13,40 @@
     <div id="breakfast">
         <button id="breakfastBtn" class="topBtn">Breakfast</button>
         <div id="breakfastMenu" class="dropdown">
-            <button>Banana bread</button>
-            <button>Banana muffins</button>
-            <button>Breakfast cookies</button>
-            <button>Pancakes</button>
+            <button id="bananaBreadD">Banana bread</button>
+            <button id="bananaMuffinsD">Banana muffins</button>
+            <button id="bananaPancakesD">Banana pancakes</button>
+            <button id="breakfastCookiesD">Breakfast cookies</button>
         </div>
     </div>
     <div id="lunch">
-        <button id="lunchBtn" class="topBtn">Lunch/Dinner</button>
-        <div id="lunchMenu" class="dropdown">
-            <button>Beef bulgogi</button>
-            <button>Caprese sandwich</button>
-            <button>Maple soy salmon</button>
-            <button>Sun-dried tomato chicken</button>
+        <button id="lunchDinnerBtn" class="topBtn">Lunch/Dinner</button>
+        <div id="lunchDinnerMenu" class="dropdown">
+            <button id="beefBulgogiD">Beef bulgogi</button>
+            <button id="capreseSandwichD">Caprese sandwich</button>
+            <button id="mapleSalmonD">Maple soy salmon</button>
+            <button id="creamyChickenD">Sun-dried tomato chicken</button>
         </div>
     </div>
     <div id="dessert">
         <button id="dessertBtn" class="topBtn">Dessert</button>
         <div id="dessertMenu" class="dropdown">
-            <button>Apple crumble</button>
-            <button>Brownie in a mug</button>
-            <button>Carrot cake cupcakes</button>
-            <button>Chocolate chip cookies</button>
-            <button>Reese's cupcakes</button>
-            <button>Strawberry cupcakes</button>
+            <button id="appleCrumbleD">Apple crumble</button>
+            <button id="mugBrownieD">Brownie in a mug</button>
+            <button id="carrotCakeD">Carrot cake cupcakes</button>
+            <button id="chocoChipD">Chocolate chip cookies</button>
+            <button id="chocoPeanutD">Reese's cupcakes</button>
+            <button id="strawberryD">Strawberry cupcakes</button>
         </div>
     </div>
     <div id="adds">
-        <button id="addsBtn" class="topBtn">Additions/Basics</button>
-        <div id="addsMenu" class="dropdown">
-            <button>Basmati rice</button>
-            <button>Boiled eggs</button>
-            <button>Candied walnuts</button>
-            <button>Mango salsa</button>
-            <button>Oreo frosting</button>
+        <button id="additionBtn" class="topBtn">Additions/Basics</button>
+        <div id="additionMenu" class="dropdown">
+            <button id="riceD">Basmati rice</button>
+            <button id="boiledEggsD">Boiled eggs</button>
+            <button id="candiedWalnutsD">Candied walnuts</button>
+            <button id="mangoSalsaD">Mango salsa</button>
+            <button id="oreoFrostingD">Oreo frosting</button>
         </div>
     </div>
 </div>
