--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=0.75">
-    <title>recipes</title>
+    <title>Recipes</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
